--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,7 @@ android {
 
 dependencies {
     implementation "com.mikepenz:materialdrawer:7.0.0"
-   // implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    // implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
@@ -49,8 +49,8 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:1.2.0"
     implementation "androidx.annotation:annotation:1.2.0"
 
-
-
-// Add for NavController support
+    // Add for NavController support
     implementation "com.mikepenz:materialdrawer-nav:7.0.0"
+
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
