--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,4 @@
+
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
@@ -5,10 +6,11 @@ plugins {
     id 'com.google.gms.google-services'
 }
 
+
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.2"
-
+    viewBinding.enabled = true
     defaultConfig {
         applicationId "com.example.telegram"
         minSdkVersion 21
@@ -35,6 +37,7 @@ android {
 }
 
 dependencies {
+
     implementation "com.mikepenz:materialdrawer:7.0.0"
     // implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
@@ -43,7 +46,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.google.firebase:firebase-auth:19.2.0'
+    implementation 'com.google.firebase:firebase-auth:20.0.4'
+    implementation 'androidx.browser:browser:1.3.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
