--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     implementation 'androidx.browser:browser:1.3.0'
     implementation 'com.google.firebase:firebase-database:19.7.0'
     implementation 'com.google.firebase:firebase-database-ktx:19.7.0'
+    implementation 'com.google.firebase:firebase-storage:19.1.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -62,4 +63,6 @@ dependencies {
     implementation "com.mikepenz:materialdrawer-nav:7.0.0"
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    api 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
 }
